...
          )}
        </Stack>
      ) : null}
    </View>
  );
  return (
    <Scaffold testID="drivers-directory">
      <FlashList
        data={failed ? [] : props.drivers}
        keyExtractor={(driver) => driver.id}
        contentContainerStyle={{
          padding: theme.space['20'],
          paddingBottom: theme.space['32'] + theme.space['16'],
...
